--- a/Lab04_EDI/wwwroot/css/site.css
+++ b/Lab04_EDI/wwwroot/css/site.css
@@ -2,70 +2,139 @@
 for details on configuring this project to bundle and minify static web assets. */
 
 a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
+
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 .border-top {
-  border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #e5e5e5;
 }
+
 .border-bottom {
-  border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
 button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
+    font-size: 1rem;
+    line-height: inherit;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px; /* Vertically center the text there */
+}
+
+/*Codigo mauricio para Login
+-----------------------------------------------------*/
+
+.loginbox {
+    width: 350px;
+    height: 300px;
+    background: #000000;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
+
+    .loginbox input {
+        font-family: 'Yu Gothic';
+        margin-bottom: 20px
+    }
+
+        .loginbox input[type="text"], input[type="password"] {
+            border: none;
+            width: 65%;
+            border-bottom: 0.5px solid #fff;
+            background: transparent;
+            outline: none;
+            height: 20px;
+            margin-bottom: 40px;
+            font-size: 16px;
+            color: #fff;
+        }
+
+        .loginbox input[type="submit"] {
+            width: 100%;
+            border: thin;
+            outline: none;
+            height: 40px;
+            background: #f00;
+            color: #ffffff;
+            font-size: 18px;
+        }
+
+            .loginbox input[type="submit"]:hover {
+                cursor: pointer;
+                background: #f5ff00;
+                color: #000;
+            }
+
+    .loginbox label {
+        border: none;
+        width: 30%;
+        outline: none;
+        height: 14px;
+    }
+
+.avatar {
+    width: 100px;
+    height: 100px;
+    background: transparent;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: -50px;
 }
